# Pegasus

./: .gitignore  CMakeLists.txt  CharacterTab.cpp  Lantern.cpp  Level.hpp  Levels.cpp  Magic.cpp  Magic.h  Makefile  NPC.cpp  NPC.hpp  Object.cpp  ObjectHandler.cpp  ObjectTile.cpp  Pegasus .aps  Pegasus .vcxproj  Pegasus .vcxproj.filters  Pegasus.log.txt  Pegasus.sln  PhysicsObject.cpp  README.md  Scene.cpp  SoundComponent.cpp  Text.txt  cmake_install.cmake  compile_commands.json  fuck.txt  imgui.ini  packages.config  stdafx.h  text.slmp
Config/: Window.cfg
Data/: text.slmp
Data/Shader/: fragment_shader.frag  lantern.frag  lantern2.frag  unicorn_magic.frag  vertex_shader.vert
Data/TileMap/: text.slmp  text.smlp
Debug/Pegasus .tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pegasus .lastbuildstate
Imgui/: imgui-SFML.h
Init/: EditorState_Keys.ini  GameState_Keys.ini  MenuState_Keys.ini  SettingsState_Keys.ini  Supported_Keys.ini  Window.cfg  Window.ini  guiicons.ini
Licenses/: LICENSE
Release/Pegasus .tlog/: CL.command.1.tlog  Pegasus .lastbuildstate
Resources/: Pegasus_ico.h
Resources/Fonts/: commit.txt
Resources/GUI/: commit.txt
engine/: Game.cpp  Game.hpp  main.cpp
engine/Componets/: Components_Include.h
engine/Entities/: Entity.cpp  Entity.hpp
include/: AnimationComponet.hpp  Apple.hpp  BattleGUI.hpp  BattleState.hpp  Blerb.hpp  Blrb.hpp  CharacterEditorState.h  CharacterTab.hpp  Coin.hpp  CombatSystem.hpp  Consumable_Item.hpp  DefaultMode.hpp  DialougeSystem.hpp  EditorModes.hpp  EditorState.hpp  Enemies_Include.h  Enemy.hpp  EnemyEditorMode.hpp  EnemySpawner.hpp  EnemySystem.hpp  Entity.hpp  EnviornmentalMode.hpp  GUI.hpp  Game.hpp  GameState.hpp  GraphicsSettings.hpp  HitBoxComponet.hpp  Inventory.hpp  Item.hpp  Lantern.hpp  LevelManagerMode.hpp  Levels.h  LightTile.hpp  MainMenuState.hpp  MovementComponets.hpp  NormalTile.hpp  Object.hpp  ObjectHandler.hpp  ObjectTile.hpp  OverWorld.hpp  (+29 more)
share/: CMakeLists.txt
share/imgui-sfml/: CMakeLists.txt
share/sfml/: CMakeLists.txt
src/: AnimationManager.cpp  BattleGUI.cpp  BattleState.cpp  Blerb.cpp  Blrb.cpp  CMakeLists.txt  CharacterEditorState.cpp  CharacterTab.cpp  DefaultMode.cpp  DialougeSystem.cpp  EditorModes.cpp  EditorState.cpp  Enemy.cpp  EnemyEditorMode.cpp  EnemySpawner.cpp  EnemySystem.cpp  Entity.cpp  EnviornmentalMode.cpp  GUI.cpp  Game.cpp  GameState.cpp  GraphicsSettings.cpp  Inventory.cpp  Level.cpp  Levels.cpp  MainMenuState.cpp  NormalTile.cpp  ObjectTile.cpp  PauseMenu.cpp  PhysicsComponents.cpp  Player.cpp  PlayerGUI.cpp  PlayerGUITabs.cpp  SettingsState.cpp  ShaderEditorMode.cpp  SkillComponent.cpp  State.cpp  StatusComponet.cpp  TMXExport.cpp  Tab.cpp  (+14 more)
src/Imgui/: imgui-SFML.cpp
src/engine/: Game.cpp  imgui.cpp  imgui_widgets.cpp  main.cpp
src/engine/Componets/Animation/: animationComponet.cpp
src/engine/Componets/Attributes/: StatusComponet.cpp
src/engine/Componets/Combat/: CombatSystem.cpp
src/engine/Componets/Dialouge/: DialougeSystem.cpp
src/engine/Componets/EnemySystem/: EnemySystem.hpp
src/engine/Componets/GUI/: BattleGUI.cpp  CharacterTab.cpp  GUI.cpp  GraphicsSettings.cpp  PlayerGUI.cpp  PlayerGUITabs.cpp  Tab.cpp
src/engine/Componets/Hitbox/: hitboxcomponet.cpp
src/engine/Componets/Movement/: MovementComponets.cpp
src/engine/Componets/Skill/: SkillComponent.cpp
src/engine/Componets/audio/: AudioComponent.cpp
src/engine/Componets/dialog/: DialougeSystem.cpp
src/engine/Componets/inventory/: Inventory.cpp
src/engine/Entities/: Entity.cpp
src/engine/Entities/Enemy/: Enemy.cpp
src/engine/Entities/Enemy/Blerb/: Blerb.cpp
src/engine/Entities/Enemy/Blrb/: Blrb.cpp
src/engine/Entities/Enemy/EnemySystem/: EnemySystem.cpp
src/engine/Entities/Player/: Player.cpp
src/engine/Inventory/: Inventory.cpp
src/engine/Items/: Item.cpp
src/engine/Items/Consumables/: Consumable_Item.cpp
src/engine/Items/Consumables/Food/: Apple.cpp
src/engine/Items/Consumables/Potions/: Potion.cpp
src/engine/Items/Misc/: Coin.cpp
src/engine/Items/Weapons/: Weapon.cpp
src/engine/Items/Weapons/Sword/: Sword.cpp
src/engine/Map/: Level.cpp  LevelManagerMode.cpp  Levels.cpp  TileMap.cpp
src/engine/States/: MainMenuState.cpp  PauseMenu.cpp  SettingsState.cpp  State.cpp
src/engine/States/Battle/: BattleState.cpp
src/engine/States/Editor/: CharacterEditorState.cpp  DefaultMode.cpp  EditorModes.cpp  EditorState.cpp  EnemyEditorMode.cpp  EnviornmentalMode.cpp  ShaderEditorMode.cpp
src/engine/States/Game/: GameState.cpp
src/engine/States/GameState/: BattleState.cpp  GameState.cpp  OverWorld.cpp
src/engine/States/MainMenu/: MainMenuState.cpp
src/engine/States/Overworld/: OverWorld (copy).cpp
src/engine/States/PauseMenu/: PauseMenu.cpp
src/engine/States/Settings/: SettingsState.cpp
src/engine/Tiles/: Tile.cpp
src/engine/Tiles/EnemySpawner/: EnemySpawner.cpp
src/engine/Tiles/Normal/: NormalTile.cpp
src/engine/Tiles/Normal Tile/: NormalTile.cpp
src/engine/Tiles/Object/: ObjectTile.cpp
src/engine/Tiles/ObjectTiles/Lantern/: Lantern.cpp
src/include/: AnimationComponet.hpp  AnimationManager.hpp  Apple.hpp  AudioComponent.h  BattleGUI.hpp  BattleState.hpp  Blrb.hpp  CharacterEditorState.h  CharacterTab.hpp  CombatSystem.hpp  Consumable_Item.hpp  DefaultMode.hpp  DialougeSystem.hpp  EditorModes.hpp  EditorState.hpp  Enemies_Include.h  Enemy.hpp  EnemyEditorMode.hpp  EnemySpawner.hpp  Entity.hpp  EnviornmentalMode.hpp  GUI.hpp  GameState.hpp  GraphicsSettings.hpp  HitBoxComponet.hpp  Inventory.hpp  Item.hpp  Levels.h  MainMenuState.hpp  Noise.h  NormalTile.hpp  ObjectTile.hpp  PauseMenu.hpp  PegasusIco.h  PhysicsComponents.hpp  Player.hpp  PlayerGUI.hpp  PlayerGUITabs.hpp  Scene.h  SceneGraph.h  (+28 more)
(+134 files in other folders)
